--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
