--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -22,7 +22,7 @@ lint:
     - git-diff-check
     - markdownlint@0.38.0
     - osv-scanner@1.5.0
-    - prettier@3.1.1
+    # - prettier@3.1.1
     - trivy@0.48.2
     - trufflehog@3.63.8
     - yamllint@1.33.0
