--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "convex": "^1.7.1",
+    "emoji-picker-react": "^4.6.9",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.5.3",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
