--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@blocknote/core": "^0.9.5",
+    "@blocknote/react": "^0.9.5",
     "@clerk/clerk-react": "^4.30.3",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
